@@ -18,6 +18,7 @@
 
 2010-11-17  Steffen Kamper  <steffen@typo3.org>
 
+	* Updated Workspaces to version 4.5.0beta1b. See their ChangeLog for details.
 	* Fixed bug #13610: t3lib_BEfunc::viewOnClick - Hook request (Thanks to Mick Klapper)
 	* Fixed bug em task or for update fixed
 	* Added feature #16295: Optimize stdWrap usage for TypoScript content element FORM (Thanks to Jo Hasenau)
